--- a/public/podcast/98.md
+++ b/public/podcast/98.md
@@ -213,7 +213,7 @@ Conozco gente muy buena, con mucha curiosidad técnica, que nunca decidió irse 
 
 ### Historia de Nicolás Pujia: saltar de círculo
 
-Voy a contarles la historia de alguien que aprovechó las oportunidades que se le presentaron. En 2023 pasó algo muy interesante en Silver: tomé la decisión de buscar un programador porque venía haciendo scripts, automatizaciones, la página, boludeces, pero necesitaba trabajar en un producto que organice un montón de otra información porque el ATS que tenemos no alcanza y necesito herramientas.
+Voy a contarles la historia de alguien que aprovechó las oportunidades que se le presentaron. En 2025 pasó algo muy interesante en Silver: tomé la decisión de buscar un programador porque venía haciendo scripts, automatizaciones, la página, boludeces, pero necesitaba trabajar en un producto que organice un montón de otra información porque el ATS que tenemos no alcanza y necesito herramientas.
 
 Abrí una posición para un founding engineer que venga, aprenda el dominio, trabaje estas herramientas y me ayude a armar un ecosistema de soluciones digitales. Empecé a tener inbound, y como una empresa de recruiting con marca, aparecieron programadores orgánicamente y contraté por inbound.
 
@@ -221,11 +221,11 @@ Una vez vi una application en este proceso del founding engineer con la pregunta
 
 > Porque comparto la opinión de que la vara en Argentina está muy baja y una plataforma de talento como esta ayudaría a despertar a algunos que tienen talento y no lo aprovechan por mero conformismo.
 
-Miro el perfil de la persona que aplicó: [Nicolás Pujia](https://nicolaspujia.com). Tenía 10 meses de experiencia trabajando en una PyME, Ciderplast, que vendía caños, una ferretería de barrio prácticamente. Miro la página y está caída. Pero me causó gracia porque claramente entendía los códigos de Silver. No pegaba con la posición ni con el segmento de contacto, pero le puso ganas al comentario. No puede ser que alguien escriba eso y esté totalmente en pelotas para venir conmigo.
+Miro el perfil de la persona que aplicó: [Nicolás Pujia](https://nicolaspujia.com). Tenía 10 meses de experiencia trabajando en una PyME, [Siderplast](https://siderplast.com.ar), que vendía caños, una ferretería de barrio prácticamente. Miro la página y está caída. Pero me causó gracia porque claramente entendía los códigos de Silver. No pegaba con la posición ni con el segmento de contacto, pero le puso ganas al comentario. No puede ser que alguien escriba eso y esté totalmente en pelotas para venir conmigo.
 
-Lo paso a la entrevista técnica. Recibe el mismo challenge que reciben todos los backends: escribir un modelo y poder detectar el ganador en un modelo de Conecta 4. La idea es terminarlo en 35 minutos. Nicolás Pujia lo terminó en 19 minutos, con una implementación súper limpia, razonable, fácil de entender y andaba. Rompió el récord de velocidad de las entrevistas técnicas de Silver. Lo terminé más rápido que cualquier otra persona en toda la historia de Silver. Personalmente hice 440 entrevistas técnicas, no es poco. Literal puesto número uno de 440, con gente que estaba cobrando $150,000 al año, gente aplicando a Ramp, etc.
+Lo paso a la entrevista técnica. Recibe el mismo challenge que reciben todos los backends: escribir un modelo y poder detectar el ganador en un modelo de [Connect4](https://docs.silver.dev/interview-ready/profile-mastery/backend/connect4). La idea es terminarlo en 35 minutos. Nicolás Pujia lo terminó en 19 minutos, con una implementación súper limpia, razonable, fácil de entender y andaba. Rompió el récord de velocidad de las entrevistas técnicas de Silver. Lo terminé más rápido que cualquier otra persona en toda la historia de Silver. Personalmente hice 440 entrevistas técnicas, no es poco. Literal puesto número uno de 440, con gente que estaba cobrando $150,000 al año, gente aplicando a Ramp, etc.
 
-Le digo: "Espectacular cómo te preparaste, bien armado. Pero no tenés fit con este rol, busco alguien senior que haga mi infraestructura. Te puedo enseñar todo de cero, pero pido solo círculos de cover". Pero esta persona estaba trabajando en una PyME, haciéndole la página web en un e-commerce. No estaba en el lugar correcto. Tenía que venir a un nivel arriba. Le digo: "Veníte conmigo, te invento un puesto". Y me revela que está en la secundaria. "¿Cómo hago con la secundaria?" "Terminá la secundaria y vení, trabajá part time". Así nació el pasante: Nicolás Pujia.
+Le digo: "Espectacular cómo te preparaste, bien armado. Pero no tenés fit con este rol, busco alguien senior que haga mi infraestructura. No te puedo enseñar todo de cero." Pero pienso en los círculos de Covey. Esta persona estaba trabajando en una PyME, haciéndole la página web en un e-commerce. No estaba en el lugar correcto. Tenía que venir a un nivel arriba. Le digo: "Veníte conmigo, te invento un puesto". Y me revela que está en la secundaria. "¿Cómo hago con la secundaria?" "Terminá la secundaria y vení, trabajá part time". Así nació el pasante: Nicolás Pujia.
 
 En los últimos seis meses, Nicolás pasó de ser un frilo en la ferretería a unirse a Silver. Empezó a participar en hackatones, eventos de programadores, se empezó a conocer en el círculo, fue a reuniones con gente del espacio, se conectó con founders, empresas, participó de Puentes, fue seleccionado entre cientos de programadores para irse a San Francisco, quedarse en una hacker house, hablar de startups, andar en autos autónomos, entrevistar, probar cosas. Se fue una semana para allá, se cruzó con [Guillermo Rauch](https://rauchg.com) y le dio una remera de Silver. Hace seis meses estaba vendiendo martillos y yeso en una página de e-commerce, y después va y le da una remera a Rauch.
 
